# pi-streamer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
pi-streamer/: start_rpi_streamer.py
